scrollbar, back fix

--- a/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/mgt-person-card.scss
@@ -161,6 +161,7 @@ $person-card-details-item-font-size: var(--person-card-details-item-font-size, 1
           }
           &::-webkit-scrollbar-button {
             background: $background-color;
+            height: 1px;
           }
           &::-webkit-scrollbar-track {
             background: $background-color;
